<resources>
    <string name="app_name">Organic</string>
    <string name="vegan">Vegan</string>
    <string name="vegan_img">Vegan</string>
    <string name="emailid">emailId</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="regis">regis</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register"><u>Register</u></string>
    <string name="products_page">Products Page</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">ADD TO CART</string>
    <string name="title_activity_bottom_nevi">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="seller_name">Seller Name</string>
    <string name="organic_food">Organic Food</string>
    <string name="todo">TODO</string>
    <string name="signup">SignUp</string>
    <string name="selected">Selected</string>
    <string name="price_of_product">Price of Product</string>
    <string name="cart">Cart</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="buy_now">Buy Now</string>
    <string name="delete">Delete</string>
    <string name="_1">1</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="profilep">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="address">address</string>
    <string name="phone_no">phone No</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="birthday">Birthday(DD/MM/YY)</string>

    <string name="others">Others</string>
    <string name="update">UPDATE</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="sign_in_with_Google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with Phone</string>
    <string name="other_sign_in_methods">"Other Sign-in Methods"</string>
    <string name="go">Go</string>
    <string name="product_title">Product Title</string>
    <string name="seller">Seller:</string>

</resources>